# WOLFLator

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  WOLFLator.spec  ainiee.py  app.py  cli.py  fonts.py  models.py  pipeline.py  pyproject.toml  requirements.txt  safe_io.py  settings.py  wolf_command_catalog.py  wolf_editor.py  wolf_tools.py
docs/qa/: 2026-07-22-gorigirlSGK1.00-e2e.md
scripts/: build.ps1  editor_calibration.py  fetch_vendor.ps1  wolf_corpus_qa.py
tests/: test_cli.py  test_core.py  test_corpus_qa.py  test_editor_calibration.py  test_pipeline.py  test_safe_io.py  test_settings_qt.py
